--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<!-- <form>
+  <p>Your Name: <input type="text"></p>
+  <p>Your Favorite Food: <input type="text"></p>
+  <input type="submit">
+</form> -->
 <html>
   <head>
     <meta charset="UTF-8">
@@ -13,3 +19,8 @@
 
   </body>
 </html>
+<form method="POST" action="/food">
+  <p>Your Name: <input type="text" name="name"></p>
+  <p>Your Favorite Food: <input type="text" name="favorite_food"></p>
+  <input type="submit">
+</form>
